chore(release): v1.6.8